<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditActivity">

    <TextView
            android:text="@string/label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivProgrammingLanguage" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <EditText
            android:id="@+id/etTitle" android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toEndOf="@+id/ivProgrammingLanguage"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:hint="@string/hint_title"/>
    <TextView
            android:id="@+id/textView2"
            android:text="@string/label_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" app:layout_constraintStart_toEndOf="@+id/ivProgrammingLanguage"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <EditText
            android:id="@+id/etLaunchYear" android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivProgrammingLanguage" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:hint="@string/hint_year"/>
    <TextView
            android:text="@string/label_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etLaunchYear" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivProgrammingLanguage" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <EditText
            android:id="@+id/etDescription" android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/ivProgrammingLanguage" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:hint="@string/hint_description"/>
    <ImageView
            android:layout_width="96dp"
            android:layout_height="110dp"
            android:src="@drawable/ic_developer_board"
            android:id="@+id/ivProgrammingLanguage"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
        <Button
                android:id="@+id/btSalvar" android:layout_marginTop="8dp"
                android:text="@string/label_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_weight="1"/>
        <Button
                android:id="@+id/btCancelar" android:layout_marginTop="8dp"
                android:text="@string/label_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_weight="1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>